Trivial fixes to tutorial

--- a/doc/Tutorials/hegde_cc07.ipynb
+++ b/doc/Tutorials/hegde_cc07.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8216b14f319d640741c242bd449465305e7859c070361b64402f3ba93036848e"
+  "signature": "sha256:d80b395e79806aec7117493f086581110481e3b9bacb99335f1b01df45c8e2e7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -46,7 +46,7 @@
      "collapsed": false,
      "input": [
       "%output dpi=150 size=100\n",
-      "%opts Layout [sublabel_format=\"\" vertical_spacing=0.05 horizontal_spacing=0.05] Image (cmap='gray') [show_xaxis=None show_frame=True show_yaxis=None show_frame=True]\n",
+      "%opts Layout [sublabel_format=\"\" vertical_spacing=0.05 horizontal_spacing=0.05] Image (cmap='gray') [show_xaxis=None show_yaxis=None show_frame=True]\n",
       "from imagen import *\n",
       "variants = 4 # Number of variants for each subclass"
      ],
@@ -272,7 +272,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Can view all patterns at once\n",
+      "Can view all patterns at once if you wish:\n",
       "\n",
       "```python\n",
       "np.sum([p[:] for c in all_stimuli_subclasses for p in c]).cols(8)\n",
