Reduced plot margins in home page notebook

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7011fc6f609cd41eb22f0463872ec23f071600cb0ad668d4faaa48ae5f0ecce4"
+  "signature": "sha256:61cae6175540c521950ed6efea6882a092b9cf9ebd60527c59e586bc46cb9a0e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -303,7 +303,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%opts Layout [sublabel_format=\"\"] Image (cmap='gray') [show_xaxis=None show_yaxis=None show_frame=True]\n",
+      "%opts Layout [sublabel_format=\"\" horizontal_spacing=.1 vertical_spacing=.1]\n",
+      "%opts Image (cmap='gray') [show_xaxis=None show_yaxis=None show_frame=True]\n",
       "from imagen import *\n",
       "from imagen.random import *\n",
       "from imagen.image import *\n",
