Added section headings and more examples

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:61cae6175540c521950ed6efea6882a092b9cf9ebd60527c59e586bc46cb9a0e"
+  "signature": "sha256:61eed4baf80ad55d841ddce6e0e58b5d1223bf80e71aee5964b8936b9b87e2ee"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -111,9 +111,22 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We will use this plotting interface to show off the remaining patterns, but please remember that the main purpose of ImaGen is to generate arrays for use in other programs, not simply to draw patterns for plotting!\n",
-      "\n",
-      "As you can see above, ``PatternGenerator`` objects return different patterns depending on their parameter values. An important feature of these parameter values is that any of them can be set to \"dynamic\" values, which will then result in a different pattern each time (see the [Param package](http://ioam.github.io/param) and its ``numbergen`` module for details).  Here, let's define a ``SineGrating`` object with a random orientation, collect four of them at different times (using the ``.anim()`` method), and lay them out next to each other (using the ``NdLayout`` class from HoloViews):"
+      "We will use this plotting interface to show off the remaining patterns, but please remember that the main purpose of ImaGen is to generate arrays for use in other programs, not simply to draw patterns for plotting!"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Dynamic parameter values"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As you can see above, ``PatternGenerator`` objects return different patterns depending on their parameter values. An important feature of these parameter values is that any of them can be set to \"dynamic\" values, which will then result in a different pattern each time (see the [Param package](http://ioam.github.io/param) and its ``numbergen`` module for details). With dynamic parameters, ``PatternGenerators`` provide streams of patterns, not just individual patterns.  For example, let's define a ``SineGrating`` object with a random orientation, collect four of them at different times (using the ``.anim()`` method), and lay them out next to each other (using the ``NdLayout`` class from HoloViews):"
      ]
     },
     {
@@ -155,10 +168,18 @@
      "outputs": []
     },
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Composite patterns"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As you can see, ``PatternGenerator`` objects can also be used as a ``mask`` for another ``PatternGenerator``, which is one simple way to combine them.  \n",
+      "As you can see above, ``PatternGenerator`` objects can also be used as a ``mask`` for another ``PatternGenerator``, which is one simple way to combine them.  \n",
       "\n",
       "``PatternGenerator``s can also be combined directly with each other to create ``Composite`` ``PatternGenerator``s, which can make any possible 2D pattern.  For instance, we can easily sum 10 oriented ``Gaussian`` patterns, each with random positions and orientations, giving a different overall pattern at each time:"
      ]
@@ -184,7 +205,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A ``Composite`` pattern works just like any other pattern, so that it can be placed, rotated, combined with others, etc., allowing you to build up arbitrarily complex objects out of simple primitives.  Here we created a ``Composite`` pattern explicitly, but it's usually easier to create them by simply using any of the usual Python operators (``+``, ``-``, ``*``, ``/``, ``**``, ``%``, ``&`` (min), and ``|`` (max)) as in the examples below (syntax requires latest git version).\n",
+      "A ``Composite`` pattern works just like any other pattern, so that it can be placed, rotated, combined with others, etc., allowing you to build up arbitrarily complex objects out of simple primitives.  Here we created a ``Composite`` pattern explicitly, but it's usually easier to create them by simply using any of the usual Python operators (``+``, ``-``, ``*``, ``/``, ``**``, ``%``, ``&`` (min), and ``|`` (max)) as in the examples below.\n",
       "\n",
       "For instance, here's an example using ``np.maximum`` (via the ``|`` operator on ``PatternGenerator``s), rotating the composite pattern together as a unit.  We also leave it as a HoloViews animation rather than laying it out over space:"
      ]
@@ -210,7 +231,7 @@
      "source": [
       "The ``.anim()`` method collects results at different times conveniently.  What it's doing is repeatedly getting a copy of each pattern, then running ``param.Dynamic.time_fn.advance(1.0)`` to advance the nominal time, then getting another copy of each pattern until 20 different times have been sampled.  The values are \"time dependent\" (because we set them to be so above), so that any randomness changes only when the time changes, and the randomness is computed as a function of time.  That way, regardless of the order you generate the patterns, or even if you go back and forward in time, you will always get the same results at a given nominal time.  In your own code, you can turn off time dependence (``param.Dynamic.time_dependent=False``), in which case new parameter values will be generated for every call to the ``PatternGenerator``.  Or, if you are working in a domain like simulation, you can set ``param.Dynamic.time_fn`` to a function based on your own nominal time, advancing it as appropriate.  You can even set that function to real time, in which case you'll get completely unpredictable randomness, which may be appropriate in some circumstances.  Whenever there is some notion of time that governs the patterns you want to see, setting ``time_dependent=True`` is a good idea, so that you have precise control over the randomness to ensure reproducible results.\n",
       "\n",
-      "We used one operator above to make the cross image, but we can combine operators in any combination, here to mask a sweeping ``Line`` pattern with a ``Disk``, add the result to a rotating image, and create an animated GIF of the results with HoloViews:"
+      "We used one operator above to make the cross image, but we can combine operators in any combination, here to build a cartoon face and add the result to a sweeping ``Line`` pattern masked with a ``Disk``, creating an animated GIF of the results with HoloViews:"
      ]
     },
     {
@@ -233,17 +254,66 @@
      "collapsed": false,
      "input": [
       "%%output holomap='gif'\n",
-      "from imagen.image import FileImage\n",
+      "lefteye    = ig.Disk(aspect_ratio=0.7, x=0.04, y=0.10, size=0.08,smoothing=0.005)\n",
+      "leftpupil  = ig.Disk(aspect_ratio=1.0, x=0.03, y=0.08, size=0.04,smoothing=0.005)\n",
+      "righteye   = ig.Disk(aspect_ratio=0.7, x=0.04, y=-0.1, size=0.08,smoothing=0.005)\n",
+      "rightpupil = ig.Disk(aspect_ratio=1.0, x=0.03, y=-0.08,size=0.04,smoothing=0.005)\n",
+      "nose   = ig.Gaussian(aspect_ratio=0.8, x=-0.1, y=0.00, size=0.04)\n",
+      "mouth  = ig.Gaussian(aspect_ratio=0.8, x=-0.2, y=0.00, size=0.06)\n",
+      "head   = ig.Disk(    aspect_ratio=1.5, x=-0.02,y=0.00, size=0.40, scale=0.70,smoothing=0.005)\n",
+      "face=head + lefteye - 1.6*leftpupil + righteye - 1.6*rightpupil - 0.5*nose - 0.8*mouth\n",
+      "face.set_param(x=0.2, y=0.1, offset=0.5, size=0.75)\n",
+      "face.orientation=ng.ScaledTime()*np.pi/20\n",
       "\n",
-      "image = FileImage(size=0.5, scale=3, orientation=ng.ScaledTime()*np.pi/20)\n",
       "line  = ig.Line(y=0.6-ng.ScaledTime()*0.03)\n",
-      "disk = ig.Disk(smoothing=0.01, size=0.8)\n",
+      "disk = ig.Disk(smoothing=0.01, size=0.4, x=-0.2, y=-0.2)\n",
       "\n",
-      "(image + (line*disk)).anim(39)"
+      "(face + line*disk).anim(39)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Image patterns"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "ImaGen can load and manipulate photographic images just like other patterns, apart from them not being resolution independent.  For full functionality this requires the optional PIL or Pillow library, but support for Numpy arrays as images is provided with no further dependencies.  For instance, if you have a database of images (here consisting of only one image for simplicity), you can repeatedly select an image at random from the database using ``Selector``, rotate it randomly if desired, and select a random patch of the image at each time:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from imagen.image import FileImage\n",
+      "inputs=[FileImage(filename=f, size=6.0,\n",
+      "                  x=ng.UniformRandom(lbound=-2,ubound=2),\n",
+      "                  y=ng.UniformRandom(lbound=-2,ubound=2),\n",
+      "                  orientation=ng.NormalRandom(sigma=0.1*np.pi))\n",
+      "        for f in [\"images/ellen_arthur.pgm\"]]\n",
+      "\n",
+      "random_selection=ig.Selector(generators=inputs)\n",
+      "NdLayout(random_selection.anim(5)).cols(6)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Applying functions to generated patterns"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -262,12 +332,21 @@
       "(FileImage()[:] + \\\n",
       "FileImage(output_fns=[tf.BinaryThreshold()])[:] + \\\n",
       "FileImage(output_fns=[Convolve()])[:] + \\\n",
-      "FileImage(output_fns=[tf.BinaryThreshold(),Convolve()])[:] + \\\n",
-      "FileImage(output_fns=[Convolve(kernel_pattern=ig.Gaussian(size=0.01)),tf.BinaryThreshold()])[:]).cols(5)"
+      "FileImage(output_fns=[Convolve(),tf.BinaryThreshold(threshold=0.45)])[:] + \\\n",
+      "FileImage(output_fns=[Convolve(kernel_pattern=ig.DifferenceOfGaussians(size=0.12)),\n",
+      "                      tf.BinaryThreshold()])[:]).cols(5)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Multi-channel patterns"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -291,12 +370,19 @@
      "outputs": []
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Pattern types provided"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "\n",
-      "Below are shown examples of each of the pattern types currently provided, using their default parameter values. Very many different parameter values can be chosen, to produce a much wider range of patterns, and adding a new pattern is very easy.  One important pattern not yet covered in this tutorial is \n",
-      "``Selector``; which chooses from a set of patterns, e.g. an image selected randomly or sequentially from a database and then randomly rotated and translated depending on the parameters."
+      "Below are shown examples of each of the pattern types currently provided, using their default parameter values. Very many different parameter values can be chosen, to produce a much wider range of patterns, and of course new patterns can be created as ``Composite`` patterns as shown above.  "
      ]
     },
     {
@@ -314,6 +400,21 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Extending ImaGen"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "New ``Composite`` patterns can be created easily without writing new classes, as shown above.  If you want to create a new non-composite type, you can simply define a new class inheriting from ``PatternGenerator``, then override ``self.function()`` to draw the pattern, and declare any new parameter(s) used by ``self.function()``.  The new pattern can then be rotated, scaled, translated, etc. automatically, with no further coding, and it can be combined with any existing or new pattern to make new ``Composite`` patterns.  If you don't want the automatic scaling, rotating, etc. (e.g. for a whole-field pattern like a new type of random distribution), you can override ``self.__call__`` instead of ``self.function()``, which allows you to do anything that returns a Numpy array of the requested size.  See the many classes in ``imagen/__init__.py`` and ``imagen/random.py`` for examples of each approach."
+     ]
     }
    ],
    "metadata": {}
