Normalized sample images independently to show them off more clearly

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -388,7 +388,7 @@
      "collapsed": false,
      "input": [
       "%opts Layout [sublabel_format=\"\" horizontal_spacing=.1 vertical_spacing=.1]\n",
-      "%opts Image (cmap='gray') [xaxis=None yaxis=None show_frame=True]\n",
+      "%opts Image (cmap='gray') [xaxis=None yaxis=None show_frame=True] {+axiswise}\n", 
       "from imagen import *\n",
       "from imagen.random import *\n",
       "from imagen.image import *\n",
