Updated for current HoloViews versions

--- a/doc/Tutorials/hegde_cc07.ipynb
+++ b/doc/Tutorials/hegde_cc07.ipynb
@@ -26,15 +26,17 @@
    "outputs": [],
    "source": [
     "import imagen as ig\n",
-    "import holoviews as hv\n",
     "import numpy as np\n",
-    "%load_ext holoviews.ipython"
+    "import holoviews as hv\n",
+    "hv.notebook_extension(\"matplotlib\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%output dpi=150 size=100\n",
@@ -88,7 +90,7 @@
     "\n",
     "polar = pol1 + pol2 + pol3 + pol4 + pol5 + pol6\n",
     "\n",
-    "np.sum([p[:] for p in polar]).cols(8)"
+    "hv.Layout([p[:] for p in polar]).cols(8)"
    ]
   },
   {
@@ -102,7 +104,7 @@
     "bar2 = [Rectangle(orientation=j*np.pi/4,smoothing=0.015,aspect_ratio=0.2,size=0.25)\n",
     "        for j in range(variants)]\n",
     "bar = bar1 + bar2\n",
-    "np.sum([p[:] for p in bar]).cols(8)"
+    "hv.Layout([p[:] for p in bar]).cols(8)"
    ]
   },
   {
@@ -114,7 +116,7 @@
     "star1 = [Asterisk(parts=3, size=0.50, orientation=j*np.pi/2) for j in range(variants)]\n",
     "star2 = [Asterisk(parts=3, size=0.25, orientation=j*np.pi/2) for j in range(variants)]\n",
     "tristar = star1 + star2\n",
-    "np.sum([p[:] for p in tristar]).cols(8)"
+    "hv.Layout([p[:] for p in tristar]).cols(8)"
    ]
   },
   {
@@ -126,7 +128,7 @@
     "star3 = [Asterisk(parts=4, size=0.50, orientation=j*np.pi/8) for j in range(variants)]\n",
     "star4 = [Asterisk(parts=4, size=0.25, orientation=j*np.pi/8) for j in range(variants)]\n",
     "cross = star3 + star4\n",
-    "np.sum([p[:] for p in cross]).cols(8)"
+    "hv.Layout([p[:] for p in cross]).cols(8)"
    ]
   },
   {
@@ -142,7 +144,7 @@
     "star6+= [Asterisk(parts=6, size=0.25)]\n",
     "star6+= [Ring(smoothing=0.015,thickness=0.05,size=0.25)]\n",
     "star = star5 + star6\n",
-    "np.sum([p[:] for p in star]).cols(8)"
+    "hv.Layout([p[:] for p in star]).cols(8)"
    ]
   },
   {
@@ -154,7 +156,7 @@
     "ang1 = [Angle(size=0.50,angle=np.pi/8, orientation=j*2*np.pi/variants) for j in range(variants)]\n",
     "ang2 = [Angle(size=0.25,angle=np.pi/8, orientation=j*2*np.pi/variants) for j in range(variants)]\n",
     "acute = ang1 + ang2\n",
-    "np.sum([p[:] for p in acute]).cols(8)"
+    "hv.Layout([p[:] for p in acute]).cols(8)"
    ]
   },
   {
@@ -166,7 +168,7 @@
     "ang3 = [Angle(size=0.50,angle=np.pi/4, orientation=j*2*np.pi/variants) for j in range(variants)]\n",
     "ang4 = [Angle(size=0.25,angle=np.pi/4, orientation=j*2*np.pi/variants) for j in range(variants)]\n",
     "right = ang3 + ang4\n",
-    "np.sum([p[:] for p in right]).cols(8)"
+    "hv.Layout([p[:] for p in right]).cols(8)"
    ]
   },
   {
@@ -178,7 +180,7 @@
     "ang5 = [Angle(size=0.50,angle=np.pi/3, orientation=j*2*np.pi/variants) for j in range(variants)]\n",
     "ang6 = [Angle(size=0.25,angle=np.pi/3, orientation=j*2*np.pi/variants) for j in range(variants)]\n",
     "obtuse = ang5 + ang6\n",
-    "np.sum([p[:] for p in obtuse]).cols(8)"
+    "hv.Layout([p[:] for p in obtuse]).cols(8)"
    ]
   },
   {
@@ -192,7 +194,7 @@
     "arc2 = [ArcCentered(arc_length=np.pi/2,smoothing=0.015,thickness=0.05,size=0.25,orientation=i*2*np.pi/variants)\n",
     "        for i in range(variants)]\n",
     "quarter = arc1 + arc2\n",
-    "np.sum([p[:] for p in quarter]).cols(8)"
+    "hv.Layout([p[:] for p in quarter]).cols(8)"
    ]
   },
   {
@@ -206,7 +208,7 @@
     "arc4 = [ArcCentered(arc_length=np.pi,smoothing=0.015,thickness=0.05,size=0.25,orientation=i*2*np.pi/variants)\n",
     "        for i in range(variants)]\n",
     "semi = arc3 + arc4\n",
-    "np.sum([p[:] for p in semi]).cols(8)"
+    "hv.Layout([p[:] for p in semi]).cols(8)"
    ]
   },
   {
@@ -220,13 +222,15 @@
     "arc6 = [ArcCentered(arc_length=3*np.pi/2,smoothing=0.015,thickness=0.05,size=0.25,orientation=i*2*np.pi/variants)\n",
     "        for i in range(variants)]\n",
     "threeqtrs = arc5 + arc6\n",
-    "np.sum([p[:] for p in threeqtrs]).cols(8)"
+    "hv.Layout([p[:] for p in threeqtrs]).cols(8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "concentric_like = pol1 + pol2[1:] + pol3[2:] + pol4[2:] + pol5[3:]\n",
@@ -250,7 +254,7 @@
     "Can view all patterns at once if you wish:\n",
     "\n",
     "```python\n",
-    "np.sum([p[:] for c in all_stimuli_subclasses for p in c]).cols(8)\n",
+    "hv.Layout([p[:] for c in all_stimuli_subclasses for p in c]).cols(8)\n",
     "```"
    ]
   }
