--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import imagen as ig\n",
@@ -76,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ImaGen depends only on NumPy, Param, and HoloViews, none of which have any other required dependencies, and it is thus easy to incorporate ImaGen into your own code to generate or use patterns freely.  An optional interface to matplotlib via HoloViews is also available, which provides a convenient way to plot the pattern objects:"
+    "ImaGen depends only on NumPy, Param, and HoloViews, none of which have any other required dependencies, and it is thus easy to incorporate ImaGen into your own code to generate or use patterns freely.  An optional plotting interface using HoloViews is also available, which provides a convenient way to plot the pattern objects (here using Matplotlib, but also supporting Bokeh):"
    ]
   },
   {
@@ -85,8 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import holoviews\n",
-    "%load_ext holoviews.ipython\n",
+    "import holoviews as hv\n",
+    "hv.notebook_extension(\"matplotlib\")\n",
     "\n",
     "line.set_param(xdensity=72,ydensity=72,orientation=np.pi/4, thickness=0.1, smoothing=0.02)\n",
     "line[:]"
@@ -233,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%output holomap='gif'\n",
+    "%%output backend='matplotlib' holomap='gif'\n",
     "lefteye    = ig.Disk(aspect_ratio=0.7, x=0.04, y=0.10, size=0.08,smoothing=0.005)\n",
     "leftpupil  = ig.Disk(aspect_ratio=1.0, x=0.03, y=0.08, size=0.04,smoothing=0.005)\n",
     "righteye   = ig.Disk(aspect_ratio=0.7, x=0.04, y=-0.1, size=0.08,smoothing=0.005)\n",
@@ -363,11 +365,17 @@
    "source": [
     "%opts Layout [sublabel_format=\"\" horizontal_spacing=.1 vertical_spacing=.1]\n",
     "%opts Image (cmap='gray') [xaxis=None yaxis=None show_frame=True] {+axiswise}\n",
+    "\n",
     "from imagen import *\n",
     "from imagen.random import *\n",
     "from imagen.image import *\n",
-    "np.sum([x()[:] for _, x in sorted(locals().items()) if isinstance(x,type)\n",
-    "        and issubclass(x,PatternGenerator) and not x.abstract]).cols(5)"
+    "\n",
+    "pattern_classes = [x for _, x in sorted(locals().items()) if isinstance(x,type)\n",
+    "                   and issubclass(x,PatternGenerator) and not x.abstract]\n",
+    "\n",
+    "all_patterns = [x()[:] for x in pattern_classes[10:]]\n",
+    "\n",
+    "hv.Layout(all_patterns).cols(5)"
    ]
   },
   {
